--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,8 @@
+NODE_ENV=development 
 PORT=4000
 MONGO_URI=mongodb+srv://amanjain91667_db_user:ZVXcMBWlm1vqcBOe@cluster0.fz3wwr1.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=z4FQ2x9YbR8_v3KfH1s2WqJ8nV0mP7aB6kL4mNs5QxTz1vC0
+JWT_EXPIRE=7d
+FRONTEND_URL=http://localhost:5173
+MAX_FILE_SIZE=10485760
+ALLOWED_FILE_TYPES=.pdf,.jpg,.jpeg,.png,.tiff
